--- a/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Shared/_Layout.cshtml
@@ -32,36 +32,32 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav id="nav-header" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">HeardHospitality</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex">
+                    @*<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">*@
+                    <ul class="navbar-nav flex-grow-1 my-nav-links">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Businesses">View Businesses</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Businesses">Businesses</a>
                         </li>
                     </ul>
 
                     @if (SignInManager.IsSignedIn(User))
                     {
-                        @*                        <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="UpdateProfile">Profile</a>
-                    </li>
-                    </ul>*@
 
                         @if (User.IsInRole("businessuser"))
                         {
 
-                            <ul class="navbar-nav flex-grow-1">
+                            <ul class="navbar-nav flex-grow-1 my-nav-links">
 
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -90,7 +86,7 @@
                         }
                         @if (User.IsInRole("employeeuser"))
                         {
-                            <ul class="navbar-nav flex-grow-1">
+                            <ul class="navbar-nav flex-grow-1 my-nav-links">
 
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -132,6 +128,8 @@
                     </ul>*@
 
                     }
+                </div>
+                <div>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
@@ -146,10 +144,8 @@
 
 
 
-
-
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container" id="footer-text">
             &copy; 2022 - HeardHospitality
             @*&copy; 2022 - HeardHospitality - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
