--- a/HeardHospitality/HeardHospitality/Views/EmployeeExperience/SubmitEmployeeExperience.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/EmployeeExperience/SubmitEmployeeExperience.cshtml
@@ -1,5 +1,21 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model HeardHospitality.Models.EmployeeExperience
+@Html.Hidden("EmployeeExperienceID")
+@Html.Hidden("EmployeeID")
+@Html.Hidden("IsVerified")
+
+<div class="text-center">
+    <br/>
+    <h3>Your job has now been saved you your profile!</h3>
+    <br />
+    <br />
+
+    <div>Would you like to leave a review for this company? You can always do this later from your My Work History page.</div>
+
+    <br />
+    <br />
+
+    <button type="button" id="review-now" class="btn btn-secondary" onclick="location.href= '@Url.Action("New", "Rating", new { busID=Model.BusinessID, empExpID=Model.EmployeeExperienceID })'">Review Now</button>
+    <button type="button" id="review-later" class="btn btn-secondary" onclick="location.href = '@Url.Action("ViewEmployeeExperience", "EmployeeExperience")'">Later</button>
+
+
+</div>
