--- a/HeardHospitality/HeardHospitality/Views/Job/ViewBusinessJobs.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Job/ViewBusinessJobs.cshtml
@@ -3,176 +3,18 @@
 }
 
 @model List<JobPostingViewModel>
-@*
-@Html.Hidden("BusinessID")
-@Html.Hidden("JobInfoID")
-@Html.Hidden("JobPerkID")
-@Html.Hidden("PerkID")
-@Html.Hidden("PhoneNum")
-@Html.Hidden("AddressLine1")
-@Html.Hidden("AddressLine2")
-@Html.Hidden("EirCode")
-@Html.Hidden("Country")
-@Html.Hidden("JobDescription")
-@Html.Hidden("MinExperience")
-@Html.Hidden("IsActive")
-@Html.Hidden("Details")
-@Html.Hidden("PerkName")*@
+
 
 <!DOCTYPE html>
 <html lang="en">
 <body>
     <div class="text-center">
-        <h1 class="display-4">My Job Openings</h1>
-        @*<table>
-            <tr>
-                <th>
-                    Business Name
-                </th>
-                <th>
-                    Job Title
-                </th>
-                <th>
-                    Job Description
-                </th>
-                <th>
-                    Salary
-                </th>
-                <th>
-                    Date Posted
-                </th>
-                <th>
-                    Minumum Experience
-                </th>
-                <th>
-                    Position Type
-                </th>
-                <th>
-                    Position Category
-                </th>
-            </tr>
+        <h1 class="display-4">My Active Job Openings</h1>
 
-            @foreach (var job in Model)
-            {
-                <tr>
-                    <td>
-                        @job.BusinessName
-                    </td>
-                    <td>
-                        @job.Title
-                    </td>
-                    <td>
-                        @job.JobDescription
-                    </td>
-                    <td>
-                        @job.Salary
-                    </td>
-                    <td>
-                        @job.PostedDate
-                    </td>
-                    <td>
-                        @job.MinExperience
-                    </td>
-                    <td>
-                        @job.PositionType
-                    </td>
-                    <td>
-                        @job.Category
-                    </td>
-                    <td>
-                        @Html.ActionLink("Delete", "Delete", new { jobId=job.JobInfoID }, new { onclick = "return confirm('Are you sure you want to delete this job?');"} )
-                    </td>
-
-                </tr>
-            }
-        </table>
-*@
-
-        <partial name="_JobsPartial" />
+        ViewData["showButton"] = true;
+        <partial name="_JobsPartial"/>
 
     </div>
 </body>
 </html>
-@*
 
-
-
-<!DOCTYPE html>
-<html lang="en">
-<body>
-    <div class="text-center">
-        <h1 class="display-4">Current Job Openings</h1>
-
-        <table>
-            <tr>
-                <th>
-                    Business Name
-                </th>
-                <th>
-                    City
-                </th>
-                <th>
-                    County
-                </th>
-                <th>
-                    Title
-                </th>
-                <th>
-                    Position Type
-                </th>
-                <th>
-                    Salary
-                </th>
-                <th>
-                    Posted Date
-                </th>
-                <th>
-                    Category
-                </th>
-                <th>
-                    Company
-                </th>
-            </tr>
-            @foreach (var job in Model)
-            {
-                <tr>
-                    <td>
-                        @job.BusinessName
-                    </td>
-                    <td>
-                        @job.City
-                    </td>
-                    <td>
-                        @job.County
-                    </td>
-                    <td>
-                        @job.Title
-                    </td>
-                    <td>
-                        @job.PositionType
-                    </td>
-                    <td>
-                        @job.Salary
-                    </td>
-                    <td>
-                        @job.PostedDate
-                    </td>
-                    <td>
-                        @job.Category
-                    </td>
-                    <td>
-                        @job.Company
-                    </td>
-
-                    <td onclick="location.href= '@Url.Action("JobDetails", "Job", new { jobId=job.JobInfoID })'">
-                        More Details
-                    </td>
-
-
-                </tr>
-            }
-
-        </table>
-    </div>
-</body>
-</html>*@
