--- a/HeardHospitality/HeardHospitality/Views/Profile/UpdateProfile.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Profile/UpdateProfile.cshtml
@@ -8,22 +8,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Update Profile</h1>
-    @*
-    <a class="navbar-brand" asp-area="" asp-controller="EmployeeExperience" asp-action="AddEmployeeExperience">Add Work History</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <a class="navbar-brand" asp-area="" asp-controller="EmployeeExperience" asp-action="ViewEmployeeExperience">View Work History</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>*@
-
-
-
-
 
     <form asp-controller="Profile" asp-action="Edit" method="post">
         <h2>My Profile</h2>
@@ -40,7 +24,7 @@
         <br />
         <input placeholder="Phone Number" asp-for="Phone" />
         <br />
-        <input placeholder="About Me" asp-for="EmpBio" />
+        <textarea type="text" class="form-textarea" placeholder="About Me" asp-for="EmpBio"></textarea>
         <br />
         <input placeholder="Desired Job" asp-for="DesiredJob" />
         <br />
