--- a/HeardHospitality/HeardHospitality/Views/Shared/_LoginPartial.cshtml
+++ b/HeardHospitality/HeardHospitality/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
 
 
         <li class="nav-item">
-            <form class="form-inline" id="logout-button"  asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <form class="form-inline" id="logout-button" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
@@ -24,7 +24,8 @@
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            @*<a class="nav-link text-dark" href="#" data-toggle="modal" data-target="#loginModalLabel">Login</a>*@
+
         </li>
     }
 </ul>
- 
